fix: better align text

--- a/src/components/CardText.module.css
+++ b/src/components/CardText.module.css
@@ -1,9 +1,8 @@
 .cardText {
   font-size: 12px;
-  display: grid;
-  grid-auto-flow: row;
-  grid-template-rows: min-content;
-  grid-gap: var(--space-1);
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-1);
   color: var(--color-text);
 }
 
@@ -18,6 +17,7 @@
 }
 
 .divider {
+  max-height: 1px;
   border-bottom: 1px solid var(--color-text-divider);
 }
 
